Bug 987497 - Force buggy drivers to pick up the TexturePass2 uniform change. r=bjacob

--HG--
extra : rebase_source : 8784c1240c5e538d95608e10a7b161b4373037cb